[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/Player Sprites/Player_Walk.png" type="Texture" id=1]
[ext_resource path="res://assets/Player Sprites/Player_Battle.png" type="Texture" id=2]
[ext_resource path="res://assets/Player Sprites/Player_Death.png" type="Texture" id=3]
[ext_resource path="res://scripts/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://assets/Lights/Radial_Gradient_Transparent.png" type="Texture" id=5]
[ext_resource path="res://assets/SavedAnimations/Player_Torch_Flicker.tres" type="Animation" id=6]
[ext_resource path="res://assets/Fonts/SpookMansionRegular-ywBde.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/Custom Mouse Cursor/Mouse_torch.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 448, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Death2",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Up_Walk",
"speed": 4.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Down_Walk",
"speed": 4.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Down_Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Left_Walk",
"speed": 4.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Right_Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Left_Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Right_Walk",
"speed": 4.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Up_Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=16]
radius = 16.0
height = 16.0

[sub_resource type="Animation" id=17]
resource_name = "Fade"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.95, 0.9, 0.85, 0.8, 0.75, 0.7, 0.65, 0.6, 0.55, 0.5 ]
}

[sub_resource type="Animation" id=18]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.498039 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.498039 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=20]
size = 100
font_data = ExtResource( 7 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 15 )
animation = "Down_Idle"

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 16 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 5 )
texture_scale = 0.2
color = Color( 0.760784, 0.47451, 0.0666667, 1 )
mode = 2
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.1

[node name="LightDuration" type="Timer" parent="Light2D"]

[node name="LightAnimation" type="AnimationPlayer" parent="Light2D"]
anims/Fade = SubResource( 17 )

[node name="TorchFlicker" type="AnimationPlayer" parent="Light2D"]
anims/Player_Torch_Flicker = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.15, 0.15 )
limit_smoothed = true
smoothing_enabled = true

[node name="CanvasModulate" type="CanvasModulate" parent="Camera2D"]
color = Color( 0, 0, 0, 1 )

[node name="Fade" type="CanvasLayer" parent="."]

[node name="FadeOverlay" type="Panel" parent="Fade"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeAnimation" type="AnimationPlayer" parent="Fade/FadeOverlay"]
anims/FadeIn = SubResource( 18 )
anims/FadeOut = SubResource( 19 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="LightCounter" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 20 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Torch" type="Sprite" parent="HUD"]
position = Vector2( 992, 140 )
texture = ExtResource( 8 )
[connection signal="Dead" from="." to="." method="_on_Player_Dead"]
[connection signal="timeout" from="Light2D/LightDuration" to="." method="_on_LightDuration_timeout"]
